crates/ruff_linter/src/rules/flake8_import_conventions/snapshots/ruff_linter__rules__flake8_import_conventions__tests__defaults.snap
---
source: crates/ruff_linter/src/rules/flake8_import_conventions/mod.rs
---
ICN001 [*] `altair` should be imported as `alt`
 --> defaults.py:6:12
  |
5 | def unconventional():
6 |     import altair
  |            ^^^^^^
7 |     import datetime
8 |     import matplotlib.pyplot
  |
help: Alias `altair` to `alt`
  |
5 | def unconventional():
  -     import altair
6 +     import altair as alt
7 |     import datetime
  |
note: This is an unsafe fix and may change runtime behavior

ICN001 [*] `datetime` should be imported as `dt`
 --> defaults.py:7:12
  |
5 | def unconventional():
6 |     import altair
7 |     import datetime
  |            ^^^^^^^^
8 |     import matplotlib.pyplot
9 |     import numpy
  |
help: Alias `datetime` to `dt`
  |
6 |     import altair
  -     import datetime
7 +     import datetime as dt
8 |     import matplotlib.pyplot
  |
note: This is an unsafe fix and may change runtime behavior

ICN001 `matplotlib.pyplot` should be imported as `plt`
  --> defaults.py:8:12
   |
 6 |     import altair
 7 |     import datetime
 8 |     import matplotlib.pyplot
   |            ^^^^^^^^^^^^^^^^^
 9 |     import numpy
10 |     import pandas
   |
help: Alias `matplotlib.pyplot` to `plt`

ICN001 [*] `numpy` should be imported as `np`
  --> defaults.py:9:12
   |
 7 |     import datetime
 8 |     import matplotlib.pyplot
 9 |     import numpy
   |            ^^^^^
10 |     import pandas
11 |     import seaborn
   |
help: Alias `numpy` to `np`
   |
8  |     import matplotlib.pyplot
   -     import numpy
9  +     import numpy as np
10 |     import pandas
   |
note: This is an unsafe fix and may change runtime behavior

ICN001 [*] `pandas` should be imported as `pd`
  --> defaults.py:10:12
   |
 8 |     import matplotlib.pyplot
 9 |     import numpy
10 |     import pandas
   |            ^^^^^^
11 |     import seaborn
12 |     import tkinter
   |
help: Alias `pandas` to `pd`
   |
9  |     import numpy
   -     import pandas
10 +     import pandas as pd
11 |     import seaborn
   |
note: This is an unsafe fix and may change runtime behavior

ICN001 [*] `seaborn` should be imported as `sns`
  --> defaults.py:11:12
   |
 9 |     import numpy
10 |     import pandas
11 |     import seaborn
   |            ^^^^^^^
12 |     import tkinter
13 |     import networkx
   |
help: Alias `seaborn` to `sns`
   |
10 |     import pandas
   -     import seaborn
11 +     import seaborn as sns
12 |     import tkinter
   |
note: This is an unsafe fix and may change runtime behavior

ICN001 [*] `tkinter` should be imported as `tk`
  --> defaults.py:12:12
   |
10 |     import pandas
11 |     import seaborn
12 |     import tkinter
   |            ^^^^^^^
13 |     import networkx
   |
help: Alias `tkinter` to `tk`
   |
11 |     import seaborn
   -     import tkinter
12 +     import tkinter as tk
13 |     import networkx
   |
note: This is an unsafe fix and may change runtime behavior

ICN001 [*] `networkx` should be imported as `nx`
  --> defaults.py:13:12
   |
11 |     import seaborn
12 |     import tkinter
13 |     import networkx
   |            ^^^^^^^^
help: Alias `networkx` to `nx`
   |
12 |     import tkinter
   -     import networkx
13 +     import networkx as nx
14 |
   |
note: This is an unsafe fix and may change runtime behavior

ICN001 [*] `altair` should be imported as `alt`
  --> defaults.py:17:22
   |
16 | def unconventional_aliases():
17 |     import altair as altr
   |                      ^^^^
18 |     import datetime as date_time
19 |     import matplotlib.pyplot as plot
   |
help: Alias `altair` to `alt`
   |
16 | def unconventional_aliases():
   -     import altair as altr
17 +     import altair as alt
18 |     import datetime as date_time
   |
note: This is an unsafe fix and may change runtime behavior

ICN001 [*] `datetime` should be imported as `dt`
  --> defaults.py:18:24
   |
16 | def unconventional_aliases():
17 |     import altair as altr
18 |     import datetime as date_time
   |                        ^^^^^^^^^
19 |     import matplotlib.pyplot as plot
20 |     import numpy as nmp
   |
help: Alias `datetime` to `dt`
   |
17 |     import altair as altr
   -     import datetime as date_time
18 +     import datetime as dt
19 |     import matplotlib.pyplot as plot
   |
note: This is an unsafe fix and may change runtime behavior

ICN001 [*] `matplotlib.pyplot` should be imported as `plt`
  --> defaults.py:19:33
   |
17 |     import altair as altr
18 |     import datetime as date_time
19 |     import matplotlib.pyplot as plot
   |                                 ^^^^
20 |     import numpy as nmp
21 |     import pandas as pdas
   |
help: Alias `matplotlib.pyplot` to `plt`
   |
18 |     import datetime as date_time
   -     import matplotlib.pyplot as plot
19 +     import matplotlib.pyplot as plt
20 |     import numpy as nmp
   |
note: This is an unsafe fix and may change runtime behavior

ICN001 [*] `numpy` should be imported as `np`
  --> defaults.py:20:21
   |
18 |     import datetime as date_time
19 |     import matplotlib.pyplot as plot
20 |     import numpy as nmp
   |                     ^^^
21 |     import pandas as pdas
22 |     import seaborn as sbrn
   |
help: Alias `numpy` to `np`
   |
19 |     import matplotlib.pyplot as plot
   -     import numpy as nmp
20 +     import numpy as np
21 |     import pandas as pdas
   |
note: This is an unsafe fix and may change runtime behavior

ICN001 [*] `pandas` should be imported as `pd`
  --> defaults.py:21:22
   |
19 |     import matplotlib.pyplot as plot
20 |     import numpy as nmp
21 |     import pandas as pdas
   |                      ^^^^
22 |     import seaborn as sbrn
23 |     import tkinter as tkr
   |
help: Alias `pandas` to `pd`
   |
20 |     import numpy as nmp
   -     import pandas as pdas
21 +     import pandas as pd
22 |     import seaborn as sbrn
   |
note: This is an unsafe fix and may change runtime behavior

ICN001 [*] `seaborn` should be imported as `sns`
  --> defaults.py:22:23
   |
20 |     import numpy as nmp
21 |     import pandas as pdas
22 |     import seaborn as sbrn
   |                       ^^^^
23 |     import tkinter as tkr
24 |     import networkx as nxy
   |
help: Alias `seaborn` to `sns`
   |
21 |     import pandas as pdas
   -     import seaborn as sbrn
22 +     import seaborn as sns
23 |     import tkinter as tkr
   |
note: This is an unsafe fix and may change runtime behavior

ICN001 [*] `tkinter` should be imported as `tk`
  --> defaults.py:23:23
   |
21 |     import pandas as pdas
22 |     import seaborn as sbrn
23 |     import tkinter as tkr
   |                       ^^^
24 |     import networkx as nxy
   |
help: Alias `tkinter` to `tk`
   |
22 |     import seaborn as sbrn
   -     import tkinter as tkr
23 +     import tkinter as tk
24 |     import networkx as nxy
   |
note: This is an unsafe fix and may change runtime behavior

ICN001 [*] `networkx` should be imported as `nx`
  --> defaults.py:24:24
   |
22 |     import seaborn as sbrn
23 |     import tkinter as tkr
24 |     import networkx as nxy
   |                        ^^^
help: Alias `networkx` to `nx`
   |
23 |     import tkinter as tkr
   -     import networkx as nxy
24 +     import networkx as nx
25 |
   |
note: This is an unsafe fix and may change runtime behavior
