crates/ruff_linter/src/rules/flake8_import_conventions/snapshots/ruff_linter__rules__flake8_import_conventions__tests__defaults_preview.snap
---
source: crates/ruff_linter/src/rules/flake8_import_conventions/mod.rs
---
--- Linter settings ---
+	plotly.graph_objects = go,
+	statsmodels.api = sm,
-linter.flake8_import_conventions.banned_aliases = {}
+linter.flake8_import_conventions.banned_aliases = {
+	geopandas = [gpd],
+}

--- Summary ---
Removed: 0
Added: 3

--- Added ---
ICN001 `plotly.graph_objects` should be imported as `go`
  --> defaults.py:39:8
   |
38 | # ICN001: plotly.graph_objects should be imported as go
39 | import plotly.graph_objects  # should require alias
   |        ^^^^^^^^^^^^^^^^^^^^
40 | import plotly.graph_objects as go  # ok
   |
help: Alias `plotly.graph_objects` to `go`


ICN001 `statsmodels.api` should be imported as `sm`
  --> defaults.py:43:8
   |
42 | # ICN001: statsmodels.api should be imported as sm
43 | import statsmodels.api  # should require alias
   |        ^^^^^^^^^^^^^^^
44 | import statsmodels.api as sm  # ok
   |
help: Alias `statsmodels.api` to `sm`


ICN002 `geopandas` should not be imported as `gpd`
  --> defaults.py:47:1
   |
46 | # ICN002: geopandas should not be imported as gpd
47 | import geopandas as gpd  # banned
   | ^^^^^^^^^^^^^^^^^^^^^^^
48 | import geopandas  # ok
49 | import geopandas as gdf  # ok
   |
