crates/ruff_linter/src/rules/flake8_import_conventions/snapshots/ruff_linter__rules__flake8_import_conventions__tests__from_imports.snap
---
source: crates/ruff_linter/src/rules/flake8_import_conventions/mod.rs
---
ICN001 `xml.dom.minidom` should be imported as `md`
 --> from_imports.py:3:8
  |
3 | import xml.dom.minidom
  |        ^^^^^^^^^^^^^^^
  |
help: Alias `xml.dom.minidom` to `md`

ICN001 `xml.dom.minidom` should be imported as `md`
 --> from_imports.py:4:27
  |
4 | import xml.dom.minidom as wrong
  |                           ^^^^^
  |
help: Alias `xml.dom.minidom` to `md`

ICN001 `xml.dom.minidom` should be imported as `md`
 --> from_imports.py:5:32
  |
5 | from xml.dom import minidom as wrong
  |                                ^^^^^
  |
help: Alias `xml.dom.minidom` to `md`

ICN001 `xml.dom.minidom` should be imported as `md`
 --> from_imports.py:6:21
  |
6 | from xml.dom import minidom
  |                     ^^^^^^^
  |
help: Alias `xml.dom.minidom` to `md`

ICN001 `xml.dom.minidom.parseString` should be imported as `pstr`
 --> from_imports.py:7:44
  |
7 | from xml.dom.minidom import parseString as wrong  # Ensure ICN001 throws on function import.
  |                                            ^^^^^
  |
help: Alias `xml.dom.minidom.parseString` to `pstr`

ICN001 `xml.dom.minidom.parseString` should be imported as `pstr`
 --> from_imports.py:8:29
  |
8 | from xml.dom.minidom import parseString
  |                             ^^^^^^^^^^^
  |
help: Alias `xml.dom.minidom.parseString` to `pstr`

ICN001 `xml.dom.minidom.parseString` should be imported as `pstr`
 --> from_imports.py:9:36
  |
9 | from xml.dom.minidom import parse, parseString
  |                                    ^^^^^^^^^^^
  |
help: Alias `xml.dom.minidom.parseString` to `pstr`

ICN001 `xml.dom.minidom.parseString` should be imported as `pstr`
  --> from_imports.py:10:57
   |
10 | from xml.dom.minidom import parse as ps, parseString as wrong
   |                                                         ^^^^^
   |
help: Alias `xml.dom.minidom.parseString` to `pstr`
