crates/ruff_linter/src/rules/flake8_import_conventions/snapshots/ruff_linter__rules__flake8_import_conventions__tests__same_name.snap
---
source: crates/ruff_linter/src/rules/flake8_import_conventions/mod.rs
---
ICN001 [*] `django.conf.settings` should be imported as `settings`
  --> same_name.py:10:41
   |
 9 | def unconventional_alias():
10 |     from django.conf import settings as s
   |                                         ^
help: Alias `django.conf.settings` to `settings`
   |
10 |     from django.conf import settings as settings
   |                                          +++++++
note: This is an unsafe fix and may change runtime behavior
